--- a/data-analyst.html
+++ b/data-analyst.html
@@ -47,6 +47,22 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/datacom.co.nz/aa3e312f-aa5d-4938-8e1d-3ea99c621da7'>Datacom - DevOps Analyst/Consultant</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/datacom.co.nz/ef5058b8-8902-4831-b630-7a41990432d6'>Datacom - Desktop Support Analyst - Contract</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
 <h5><a href='https://docsapp.recruiterbox.com/jobs/fk03hdu/'>
     Data Analyst at DocsApp
 </a></h5> 
@@ -89,7 +105,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/yext/jobs/1790589'>Job Application for Data Analyst at Yext</a></h5> 
+<h5><a href='https://boards.greenhouse.io/yext/jobs/1790589'>Job Application for Data Analyst at Yext</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -97,7 +113,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/payfit/a324c2b0-4b10-4eb3-9ec6-fa09c5c52785'>PayFit - Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/payfit/a324c2b0-4b10-4eb3-9ec6-fa09c5c52785'>PayFit - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -115,7 +131,7 @@
 <p><span class="badge badge-light">Albany, NY</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/harrys/jobs/1790416'>Job Application for Senior Data Analyst at Harry's</a></h5> 
+<h5><a href='https://boards.greenhouse.io/harrys/jobs/1790416'>Job Application for Senior Data Analyst at Harry's</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The Analytics team is a critical function that supports data-driven decision-making 
 throughout Harry's. The team is the central nervous system of the organization?...</p>
@@ -270,7 +286,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://theplumguide.recruitee.com/o/data-analyst'>Data Analyst - The Plum Guide</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theplumguide.recruitee.com/o/data-analyst'>Data Analyst - The Plum Guide</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Creating automated ways with the help of our data engineer to pipe data such as 
 targets and schedules. Building dashboards within Google Data Studio so our?...</p>
@@ -406,12 +422,12 @@ Syosset, New York, United States ? Data Solutions. Description. ABOUT 605.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Acquistion Data Analyst at BDSwiss.</p>
 <hr/>
-<h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurobank.workable.com/j/094CAC131F?viewed=true'>Data Governance Business Analyst ... - Eurobank Ergasias SA - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Governance Business Analyst at Eurobank 
 Ergasias SA.</p>
 <hr/>
-<h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://softheon.workable.com/jobs/1082139/candidates/new'>Marketing Data Analyst - Apply online - Softheon - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Marketing Data Analyst at Softheon.</p>
 <hr/>
@@ -468,25 +484,6 @@ time?...</p>
 <h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/analytics-developer-data-analyst-21687-21688-bJnpHMRS4r6ArBaKkRyNN8'>Analytics Developer-Data Analyst-21687/21688 #0238 job at Radiant Digital in Irving, TX, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/revance/job/oFgmafwb'>Revance Therapeutics, Inc. Careers - Senior Biostatistician</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... Essential Functions: Provide expertise and guidance to the Clinical Development 
-team regarding statistical methods for data analysis of clinical trials. Provide?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/veristat/job/oH7Bafwj'>Veristat Careers - Manager of Statistical Programming</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Provide input into Case Report Form (CRF) and Data Validation Specifications (
-DVS) development in all therapeutic areas; writing specifications for analysis?...</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692295981-data-analyst'>Octopus Data Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/crime-data-analyst-i-25101'>Crime Data Analyst I - ELSEVIER Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 15, 2019 ... This position exists to provide Crime Analysis services to a customer of 
-LexisNexis to include tactical, strategic, administrative, and operational...</p>
 <hr/>
 
 
